frontend/infra/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lambda-hack-fe-svc
  namespace: karnot
spec:
  selector:
    app: lambda-hack-fe
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
